# turbo-resin

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  lv_conf.h  memory.x  rust-toolchain.toml
.cargo/: config.toml
.github/: FUNDING.yml
docker/: Dockerfile  README.md
gdb/: attach.gdb  jlink.gdb  main.gdb  openocd.gdb  run.gdb
linker/: gd32f307.x  stm32f407.x  stm32f407ze.x
lv_conf/: readme.txt
lv_conf/320x240/: lv_conf.h
lv_conf/480x320/: lv_conf.h
misc/: gd32f307.mmap  gd32f307ve.svd  openocd-stlink.cfg  parse_dump.py  print_ports_config.py  rom_stats.py  saturn_ports.txt  stm32f107.svd  stm32f407.mmap  stm32f407ze.svd  syms_stats.py
src/: consts.rs  logging.rs  main.rs  util.rs
src/consts/: mod.rs  mono4k.rs  saturn.rs
src/drivers/: clock.rs  cycle_counter.rs  delay.rs  display.rs  ext_flash.rs  gd32f307_clock.rs  init.rs  lcd.rs  machine.rs  mod.rs  stepper.rs  stepper_profile.rs  touch_screen.rs  zsensor.rs
src/drivers/lcd/: canvas.rs  drawing.rs  lcd.rs  lcd_fpga.rs  mod.rs
src/drivers/lcd/mono4k/: framebuffer.rs  lcd.rs  mod.rs
src/drivers/lcd/saturn/: framebuffer.rs  lcd.rs  lcd_fpga.rs  mod.rs
src/drivers/lcd_monox/: drawing.rs  mod.rs
src/drivers/touch_screen/: mod.rs  mono4k.rs  saturn.rs
src/drivers/usb/: channels.rs  enumeration.rs  errors.rs  mod.rs  msc.rs  msc_block_device.rs  usb_host.rs
src/drivers/zaxis/: distance.rs  drv8424.rs  mod.rs  motion_control.rs  motion_control_async.rs  origin.rs  origin_calibration.rs  sensor.rs  step_generator.rs  stepper.rs  zsensor.rs
src/file_formats/: ctb.ksy  ctb.rs  mod.rs  photon.ksy  photon.rs
src/ui/: main_loop.rs  mod.rs  move_z.rs
src/util/: bitbang_spi.rs  io.rs  mod.rs  panic.rs  shared_with_interrupt.rs  spi_adapter.rs  task_runner.rs
src/util/io/: buf_io.rs  fatfs.rs  file.rs  mod.rs  traits.rs
stuff/: gd32f307.svd  openocd-jlink.cfg  openocd-stlink.cfg  rom_stats.py  stm32f107.mmap
