[package]
authors = ["Nicolas Viennot <nicolas@viennot.biz>"]
edition = "2021"
readme = "README.md"
name = "app"
version = "0.1.0"

[dependencies]
log = { version = "0.4", features = ["max_level_debug", "release_max_level_off"] }
futures = { version = "0.3", default-features = false }
embedded-hal = "0.2.3"
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
rtt-target = { version = "0.3", features = ["cortex-m"]}

embassy = { path = "embassy/embassy", features = ["log"] }
embassy-stm32 = { path = "embassy/embassy-stm32", features= ["nightly", "unstable-pac", "exti"] }

# The gd32f3 crate is only to configure the clock at 120Mhz
gd32f3 = { git = "https://github.com/nviennot/gd32f3-rs.git", optional=true }

spi-memory = "0.2" # For the external flash access. Will be useful when we do firmware updates

embedded-graphics = "0.7"
embedded-graphics-core = "0.3"
lvgl = { git = "https://github.com/nviennot/lvgl-rs.git", features =["logger", "lvgl_alloc"] }

bitflags = "1.3"
num = { version = "0.4", default-features = false }
heapless = "0.7"

# This is for FAT32
embedded-sdmmc = { git = "https://github.com/nviennot/embedded-sdmmc-rs.git" }


[features]
# MCUs
stm32f1 = []
stm32f4 = []
gd32f307ve = [
    "stm32f1",
    "gd32f3/gd32f307",
    "embassy-stm32/skip_clock_init",
    "embassy-stm32/gd32f307ve",
    "embassy-stm32/time-driver-tim3",
]
stm32f407ze = [
    "stm32f4",
    "embassy-stm32/stm32f407ze",
    "embassy-stm32/time-driver-tim3",
]

# Printers

# Elegoo Saturn
saturn = ["stm32f407ze"]
# Chitu L V3
lv3 = ["stm32f407ze"]
# Anycubic Mono 4K
mono4k = ["gd32f307ve"]

default = []

# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false

[profile.dev]
opt-level = 'z'

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# uncomment for dev on these:

#[patch."https://github.com/nviennot/embedded-sdmmc-rs.git"]
#embedded-sdmmc = { path = "repos/embedded-sdmmc-rs" }

#[patch."https://github.com/nviennot/stm32f1xx-hal.git"]
#stm32f1xx-hal = { path = "repos/stm32f1xx-hal" }

#[patch."https://github.com/nviennot/lvgl-rs.git"]
#lvgl = { path = "repos/lvgl-rs/lvgl" }
